--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf9b81e",
+   "id": "c4ff1d22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38e17d0",
+   "id": "5fc6774f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fe23bc4",
+   "id": "d44de43f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d582790c",
+   "id": "b0799484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +141,22 @@
     "                action_space.append((i,j))\n",
     "                \n",
     "    return action_space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c40ad2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batch_object(state, furniture, action):\n",
+    "    f = furniture[0][0]\n",
+    "    shape = furniture.shape\n",
+    "    \n",
+    "    for i in range(action[0], action[0] + shape[0]):\n",
+    "        for j in range(action[1], action[1] + shape[1]):\n",
+    "            state[i][j] = f"
    ]
   }
  ],
