--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4ff1d22",
+   "id": "10a354e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc6774f",
+   "id": "80b5d1c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d44de43f",
+   "id": "b9f77279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0799484",
+   "id": "0c0c73af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c40ad2b",
+   "id": "45e8cb1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +157,74 @@
     "    for i in range(action[0], action[0] + shape[0]):\n",
     "        for j in range(action[1], action[1] + shape[1]):\n",
     "            state[i][j] = f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e5b872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distance(p1, p2):\n",
+    "    return math.sqrt((p1[0]-p2[0])**2 + (p1[1]-p2[1])**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1778ff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_reward(d_pos_list, t_pos_list):\n",
+    "    reward = 0\n",
+    "    \n",
+    "    for d, t in zip(d_pos_list, t_pos_list):\n",
+    "        reward += distance(d, t)\n",
+    "        \n",
+    "    return -reward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ba82ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pos_list(state, target, furniture):\n",
+    "    d_pos_list = []\n",
+    "    t_pos_list = []\n",
+    "\n",
+    "    for key, f in furniture.items():\n",
+    "        d_pos = (-1,-1)\n",
+    "        t_pos = (-1,-1)\n",
+    "\n",
+    "        for i in range(20):\n",
+    "            flag = False\n",
+    "            for j in range(20):\n",
+    "                if state[i][j] == key:\n",
+    "                    d_pos = (i,j)\n",
+    "                    flag = True\n",
+    "                    break\n",
+    "            if flag:\n",
+    "                break\n",
+    "\n",
+    "        for i in range(20):\n",
+    "            flag = False\n",
+    "            for j in range(20):\n",
+    "                if target[i][j] == key:\n",
+    "                    t_pos = (i,j)\n",
+    "                    flag = True\n",
+    "                    break\n",
+    "            if flag:\n",
+    "                break\n",
+    "\n",
+    "        d_pos_list.append(d_pos)\n",
+    "        t_pos_list.append(t_pos)\n",
+    "\n",
+    "    return d_pos_list, t_pos_list"
    ]
   }
  ],
