--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10a354e3",
+   "id": "3d7ec8c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b5d1c3",
+   "id": "f596fc14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9f77279",
+   "id": "f835c2c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c0c73af",
+   "id": "a1cac3d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45e8cb1f",
+   "id": "cabefb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e5b872",
+   "id": "2a170b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1778ff5",
+   "id": "583f534f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4ba82ba",
+   "id": "0c1b8a7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +225,36 @@
     "        t_pos_list.append(t_pos)\n",
     "\n",
     "    return d_pos_list, t_pos_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "803ec75f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    data = datas[i]\n",
+    "    target = targets[i]\n",
+    "    \n",
+    "    state = np.zeros((20,20))\n",
+    "    furniture = get_furniture_list(data)\n",
+    "    print(i)\n",
+    "    for key, f in furniture.items():\n",
+    "        mask = get_mask(state, f)\n",
+    "        action_space = get_action_space(mask)\n",
+    "        if np.array(action_space).shape[0] == 0:\n",
+    "            reward = -500\n",
+    "        else:\n",
+    "            action = random.sample(action_space, 1)[0]\n",
+    "            batch_object(state, f, action)\n",
+    "            d_pos_list, t_pos_list = get_pos_list(state, target, furniture)\n",
+    "            reward = calculate_reward(d_pos_list, t_pos_list)\n",
+    "        print(reward)\n",
+    "        \n",
+    "        append_sample(state, mask, target, reward)\n",
+    "    print('')"
    ]
   }
  ],
