--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7ec8c5",
+   "id": "537aa5af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f596fc14",
+   "id": "3fb34d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f835c2c2",
+   "id": "0306ee11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1cac3d2",
+   "id": "34c1b1db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cabefb86",
+   "id": "eb042ace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a170b99",
+   "id": "c9842fb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "583f534f",
+   "id": "ad78eac9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1b8a7a",
+   "id": "dc7273bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "803ec75f",
+   "id": "272b40cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +255,46 @@
     "        \n",
     "        append_sample(state, mask, target, reward)\n",
     "    print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2aaff83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0385be9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = random.sample(memory, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8be39b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = datas[0]\n",
+    "target = targets[0]\n",
+    "data.shape, target.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e69e7fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = np.zeros((20,20))"
    ]
   }
  ],
